# opencloudtouch

./: .ci-config.json  .ci-config.md  .commitlintrc.json  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  ENV-FILES.md  README.md  UPGRADING.md  changed_files.txt  codecov.yml  config.example.yaml  models.json  multicast_receiver.py  multicast_sender.py  package-lock.json  package.json  pre-commit.ps1  preset_final.xml  preset_list_after_oct.xml  sonar-project.properties  ssdp_sender.py  test_bose_official_lib.py  test_ssdp_bose.py  test_ssdp_in_container.py  test_ssdp_wsl.py
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORTERS-API.md  dependabot.yml
.husky/: pre-commit
agent-prompts/: CODEBASE_CLEANUP_AGENT_PROMPT.md  REFACTORING_AGENT_PROMPT.md
apps/backend/: README.md  entrypoint.sh  openapi.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_ssdp.py
apps/backend/adapters/: bosesoundtouch_adapter.py
apps/backend/scripts/: fetch-api-schemas-complete.ps1
apps/backend/src/cloudtouch/core/: config.py
apps/backend/src/opencloudtouch/: __init__.py  __main__.py  main.py
apps/backend/src/opencloudtouch/api/: bug_report.py  diagnostics.py
apps/backend/src/opencloudtouch/bmx/: radiobrowser_routes.py  resolve_routes.py  routes.py  stream_utils.py  tunein.py
apps/backend/src/opencloudtouch/core/: config.py  dependencies.py  logging.py  logs_routes.py  repository.py  source_types.py  static_files.py
apps/backend/src/opencloudtouch/devices/: adapter.py  capabilities.py  client.py  client_adapter.py  hardware.py  health_check.py  interfaces.py  mock_client.py  rename_service.py  repository.py  service.py  startup_check.py  state.py
apps/backend/src/opencloudtouch/devices/api/: event_routes.py  preset_stream_routes.py  routes.py
apps/backend/src/opencloudtouch/devices/discovery/: ssdp.py
apps/backend/src/opencloudtouch/devices/websocket/: __init__.py  connection.py  icy_worker.py  manager.py  parser.py  throttle.py
apps/backend/src/opencloudtouch/discovery/: __init__.py
apps/backend/src/opencloudtouch/marge/: routes.py  xml_builder.py
apps/backend/src/opencloudtouch/presets/: __init__.py  models.py  repository.py  service.py
apps/backend/src/opencloudtouch/presets/api/: __init__.py  descriptor_service.py  routes.py  station_routes.py
apps/backend/src/opencloudtouch/radio/: adapter.py  provider.py
apps/backend/src/opencloudtouch/radio/api/: routes.py
apps/backend/src/opencloudtouch/radio/providers/: mock.py  radiobrowser.py  tunein.py
apps/backend/src/opencloudtouch/recents/: __init__.py  models.py  repository.py
apps/backend/src/opencloudtouch/settings/: repository.py
apps/backend/src/opencloudtouch/setup/: __init__.py  account_pairing_service.py  api_models.py  config_service.py  hosts_service.py  models.py  persistence_service.py  routes.py  service.py  ssh_client.py  wizard_routes.py  wizard_service.py
apps/backend/src/opencloudtouch/swupdate/: __init__.py  routes.py
apps/backend/src/opencloudtouch/zones/: __init__.py  models.py  repository.py  routes.py  service.py
apps/backend/tests/: conftest.py
apps/backend/tests/e2e/: demo_iteration1.py  demo_iteration3.py
apps/backend/tests/integration/: conftest.py  test_api_contract.py  test_api_integration.py  test_real_api_stack.py  test_restore_api.py
apps/backend/tests/integration/devices/: test_preset_stream_endpoint.py
apps/backend/tests/integration/presets/: __init__.py  test_preset_routes.py
apps/backend/tests/regression/: test_bugfixes.py  test_device_removal_cascade.py  test_issue_184_missing_uuid.py  test_offline_device_blocks_server.py  test_sse_artwork_enrichment.py
apps/backend/tests/unit/: test_bug_report.py  test_diagnostics.py  test_main.py  test_wizard_audit_routes.py
apps/backend/tests/unit/bmx/: test_orion_adapter.py  test_radiobrowser_playback.py  test_registry_custom.py  test_stream_utils.py  test_tunein.py
apps/backend/tests/unit/core/: test_config.py  test_error_handlers.py  test_exception_handlers.py  test_exceptions.py  test_logging.py  test_logs_routes.py  test_static_files.py
apps/backend/tests/unit/devices/: test_client_adapter.py  test_event_routes.py  test_hardware.py  test_health_check.py  test_icy_worker.py  test_rename_service.py  test_repository.py  test_route_cache.py  test_service.py  test_startup_check.py  test_state.py  test_store_preset.py
apps/backend/tests/unit/devices/api/: test_device_routes.py  test_discovery_routes.py  test_preset_stream_routes.py
apps/backend/tests/unit/devices/discovery/: test_ssdp.py
apps/backend/tests/unit/devices/websocket/: test_connection.py  test_icy_worker.py  test_manager.py  test_parser.py  test_throttle.py
apps/backend/tests/unit/marge/: test_account.py  test_streaming_routes.py  test_xml_builder.py
apps/backend/tests/unit/presets/: __init__.py  test_models.py  test_repository.py
apps/backend/tests/unit/presets/api/: __init__.py  test_descriptor_service.py
apps/backend/tests/unit/radio/: test_adapter.py
apps/backend/tests/unit/radio/api/: test_radio_routes.py
apps/backend/tests/unit/radio/providers/: test_radiobrowser.py
apps/backend/tests/unit/recents/: test_repository.py
apps/backend/tests/unit/setup/: test_account_pairing_service.py  test_config_service.py  test_finalize_service.py  test_hosts_service.py  test_models.py  test_persistence_service.py  test_restore_service.py  test_routes.py  test_service.py  test_ssh_client.py  test_verify_setup.py  test_wizard_coverage.py  test_wizard_regression.py  test_wizard_routes.py
apps/backend/tests/unit/swupdate/: test_swupdate.py
apps/backend/tests/unit/zones/: test_client_adapter_zones.py  test_zone_repository.py  test_zone_routes.py  test_zone_service.py
backend/: pytest.ini  requirements-dev.txt
deployment/: Dockerfile  docker-compose.yml
doc/: wave-soundtouch-iv-telnet-setup.md
docs/: ARCHITECTURE.md  CODECOV_SETUP.md  GIT_HOOKS.md  (+2 more)
(+331 files in other folders)
