[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencloudtouch"
version = "1.0.0"
description = "Local control for compatible streaming devices after cloud shutdown"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "bosesoundtouchapi>=1.0.86",
    "defusedxml>=0.7.1",
    "websockets>=13.1",
    "ssdpy>=0.4.1",
    "asyncssh>=2.20.0",
    "starlette>=0.40.0",
    "jaraco-context==6.1.1",
    "wheel==0.46.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.6.0",
    "respx>=0.21.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short --timeout=30"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
update_changelog_on_bump = true
bump_message = "chore(release): bump version to $new_version"

[tool.coverage.run]
data_file = "../../.out/coverage/backend/.coverage"
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.coverage.html]
directory = "../../.out/coverage/backend/htmlcov"

[tool.coverage.xml]
output = "../../.out/coverage/backend/coverage.xml"

[tool.coverage.json]
output = "../../.out/coverage/backend/coverage.json"
