[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencloudtouch"
version = "1.1.3"
description = "Local control for compatible streaming devices after cloud shutdown"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "bosesoundtouchapi>=1.0.86",
    "defusedxml>=0.7.1",
    "websockets>=13.1",
    "ssdpy>=0.4.1",
    "asyncssh>=2.20.0",
    "starlette>=0.40.0",
    "jaraco-context==6.1.2",
    "wheel==0.46.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.6.0",
    "respx>=0.21.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-x -m \"not real_devices\" --strict-markers --tb=short --timeout=60"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "error::ResourceWarning",
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require running server/devices)",
    "real_devices: marks tests that require real hardware (excluded by default)",
    "mock_only: marks tests that only work with mock adapters",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.3"
tag_format = "v$version"
update_changelog_on_bump = true
bump_message = "chore(release): bump version to $new_version"

[tool.coverage.run]
data_file = "../../.out/coverage/backend/.coverage"
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "../../.out/coverage/backend/htmlcov"

[tool.coverage.xml]
output = "../../.out/coverage/backend/coverage.xml"

[tool.coverage.json]
output = "../../.out/coverage/backend/coverage.json"

[tool.ruff]
cache-dir = "../../.out/.ruff_cache"
